--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <header>
       <div class="logo">
         babygirl
-        <span class="extra-text">| your desire, your rules</span>
+        <span class="extra-text">| your desire, my rules</span>
       </div>
       <div class="email-form">
         <input type="email" id="email" placeholder="Enter your email..." />
