--- a/index.html
+++ b/index.html
@@ -272,8 +272,12 @@
   padding-left: 20px;
   color: #d6a0f4;
 }
-#task-list li {
+#task-checklist li {
   margin-bottom: 10px;
+  color: #d6a0f4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
   </style>
 </head>
@@ -316,13 +320,16 @@
           <p>Tell me how you wish to interact today.</p>
           <ul id="mind-options">
             <li onclick="showMindMessage('Maybe we can have that happen. Dress code might be, well, subject to *change*.')">
-              I think I can work in an interview today. 😈
+              I think I can work in an interview today. 😋
             </li>
             <li onclick="showMindMessage('Good. Call me up when you are fully naked and ready to shower on display for me.')">
               Maybe I can take you along for a trip to the shower? 🚿
             </li>
             <li onclick="showMindMessage('Great. Wear a vest and no bra, and anything else you wish to.')">
               I'd love a little one-on-one video call, maybe. 💞
+            </li>
+            <li onclick="showMindMessage('Of course, babygirl. I love teaching you. Head on over to the chatbox.')">
+              Can you just teach me how to dirty-talk well with you? 😙
             </li>
           </ul>
         </section>
@@ -524,6 +531,22 @@ function addToTaskList(task) {
 
   const li = document.createElement("li");
   li.textContent = task;
+
+  const doneButton = document.createElement("button");
+  doneButton.textContent = "Done";
+  doneButton.style.marginLeft = "10px";
+  doneButton.style.backgroundColor = "#a855f7";
+  doneButton.style.color = "white";
+  doneButton.style.border = "none";
+  doneButton.style.padding = "3px 8px";
+  doneButton.style.borderRadius = "4px";
+  doneButton.style.cursor = "pointer";
+
+  doneButton.addEventListener("click", () => {
+    checklist.removeChild(li);
+  });
+
+  li.appendChild(doneButton);
   checklist.appendChild(li);
 }
 
