--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 <body>
   <div id="intro-screen">
     <h1 class="intro-text">Welcome, babygirl.</h1>
-    <p class="intro-sub">You know the rules. Obey. Submit. Please.</p>
-    <button id="enter-btn">I’m ready.</button>
+    <p class="intro-sub">You know the rules, darling. Obey. Submit. Please.</p>
+    <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
 
   <div id="main-app" style="display: none;">
