--- a/index.html
+++ b/index.html
@@ -160,41 +160,62 @@
     }
 
     footer {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 15px;
-      background-color: #1a1a1a;
-      border-top: 1px solid #333;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 20px;
+  background-color: #1a1a1a;
+  border-top: 1px solid #333;
+  flex-wrap: wrap;
+}
 
-    .footer-tab {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+.footer-tab {
+  background-color: #2a2a2a;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 0 8px rgba(214, 160, 244, 0.2);
+  flex: 1;
+  min-width: 280px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
-    .footer-tab textarea {
-      resize: none;
-      height: 50px;
-      width: 200px;
-      padding: 5px;
-      border-radius: 5px;
-      border: none;
-    }
+.footer-tab textarea {
+  resize: vertical;
+  height: 80px;
+  padding: 10px;
+  font-size: 0.95rem;
+  border-radius: 8px;
+  border: none;
+  background-color: #1a1a1a;
+  color: white;
+}
 
-    .footer-tab input[type="file"] {
-      color: white;
-    }
+.footer-tab input[type="file"] {
+  color: white;
+  background-color: #1a1a1a;
+  border: 1px dashed #555;
+  padding: 8px;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-    .footer-tab button {
-      background-color: #d6a0f4;
-      color: black;
-      padding: 6px 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+.footer-tab button {
+  background-color: #d6a0f4;
+  color: #000;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.footer-tab button:hover {
+  background-color: #a855f7;
+}
 
     #intro-screen {
       position: fixed;
