--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       <ul>
         <li onclick="selectDriveStep(1, 'Control')">I don't think I can do much, but I'd happily take on any passive tasks you have for me.</li>
         <li onclick="selectDriveStep(1, 'Tease')">Maybe I can do something for you in a video?</li>
-        <li onclick="selectDriveStep(1, 'Obey')">I'd love to simply take off my clothes for you, in any way you wish.</li>
+        <li onclick="selectDriveStep(1, 'Obey')">I'd love to simply send you a hot little picture, no boundaries at all.</li>
       </ul>
     </div>
 
@@ -463,22 +463,22 @@ function selectDriveStep(step, value) {
     let step2Options = '';
     if (value === 'Control') {
       step2Options = `
-        <li onclick="selectDriveStep(2, 'Mind Games')">Mind Games 🌀</li>
-        <li onclick="selectDriveStep(2, 'Slow Denial')">Slow Denial 🕰️</li>
+        <li onclick="selectDriveStep(2, 'Mind Games')">I'd love to wear (or not wear) something, or anything, you want. </li>
+        <li onclick="selectDriveStep(2, 'Slow Denial')">I think I'll explore some other passive task to please you.</li>
       `;
     } else if (value === 'Tease') {
       step2Options = `
-        <li onclick="selectDriveStep(2, 'Whispers')">Whispers 🫦</li>
-        <li onclick="selectDriveStep(2, 'Public Play')">Public Play 🏙️</li>
+        <li onclick="selectDriveStep(2, 'Whispers')">I wouldn't mind starting naked and ready to do whatever you tell me in the video.</li>
+        <li onclick="selectDriveStep(2, 'Public Play')">I'd rather you instruct me which clothes to take off, how, and when.</li>
       `;
     } else if (value === 'Obey') {
       step2Options = `
-        <li onclick="selectDriveStep(2, 'Instructions')">Instructions 📋</li>
-        <li onclick="selectDriveStep(2, 'Deprivation')">Deprivation 🚫</li>
+        <li onclick="selectDriveStep(2, 'Instructions')">Maybe I can be interacting with some thing else in the room?</li>
+        <li onclick="selectDriveStep(2, 'Deprivation')">I would love it if you allow me to use some accessories, anywhere on my body.</li>
       `;
     }
 
-    step2.innerHTML = `<p>What flavor of that drive?</p><ul>${step2Options}</ul>`;
+    step2.innerHTML = `<p>Tell me more, kitten.</p><ul>${step2Options}</ul>`;
   }
 
   if (step === 2) {
@@ -490,37 +490,37 @@ function selectDriveStep(step, value) {
 
     if (prev === 'Control' && value === 'Mind Games') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Collapse')">Collapse 🧠💥</li>
-        <li onclick="selectDriveStep(3, 'Surrender')">Surrender 🤍</li>
+        <li onclick="selectDriveStep(3, 'Collapse')">I will skip on wearing panties for a week. You can check in on me any time I am free.</li>
+        <li onclick="selectDriveStep(3, 'Surrender')"> I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free. </li>
       `;
     } else if (prev === 'Control' && value === 'Slow Denial') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Tears')">Tears 💧</li>
-        <li onclick="selectDriveStep(3, 'Desperation')">Desperation 🫠</li>
+        <li onclick="selectDriveStep(3, 'Tears')">I'll voluntarily learn how to dirty-talk with you throughout the week, right here on this webpage.</li>
+        <li onclick="selectDriveStep(3, 'Desperation')">I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.</li>
       `;
     } else if (prev === 'Tease' && value === 'Whispers') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Begging')">Begging 🙏</li>
-        <li onclick="selectDriveStep(3, 'Moaning')">Moaning 🎙️</li>
+        <li onclick="selectDriveStep(3, 'Begging')">I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!</li>
+        <li onclick="selectDriveStep(3, 'Moaning')">Pleast let me be naked on video for you, standing upright and saying "I love being your good girl", and then turning around to present my ass to you. </li>
       `;
     } else if (prev === 'Tease' && value === 'Public Play') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Shame')">Shame 🫣</li>
-        <li onclick="selectDriveStep(3, 'Thrill')">Thrill 🧨</li>
+        <li onclick="selectDriveStep(3, 'Shame')">I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.</li>
+        <li onclick="selectDriveStep(3, 'Thrill')">I will start out standing, wearing only a vest and panties, and then lower my vest to my thighs to present my breasts to you, all the while smiling at you.</li>
       `;
     } else if (prev === 'Obey' && value === 'Instructions') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Complete Submission')">Complete Submission 🧎‍♀️</li>
-        <li onclick="selectDriveStep(3, 'Blind Trust')">Blind Trust 🔒</li>
+        <li onclick="selectDriveStep(3, 'Complete Submission')">I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.</li>
+        <li onclick="selectDriveStep(3, 'Blind Trust')">Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you.</li>
       `;
     } else if (prev === 'Obey' && value === 'Deprivation') {
       step3Options = `
-        <li onclick="selectDriveStep(3, 'Beg For Release')">Beg For Release ⛓️</li>
-        <li onclick="selectDriveStep(3, 'Cry Yourself Dry')">Cry Yourself Dry 😭</li>
+        <li onclick="selectDriveStep(3, 'Beg For Release')">I'd love to send you an upper-half profile topless video of me taking off my glasses, letting my hair down, and putting on eyeliner. I love being pretty for you!</li>
+        <li onclick="selectDriveStep(3, 'Cry Yourself Dry')">A simple nude front profile mirror selfie, standing with a foot planted in front of the other, one hand loosely covering my pussy, wearing nothing but my college ID card. </li>
       `;
     }
 
-    step3.innerHTML = `<p>What should your fate be?</p><ul>${step3Options}</ul>`;
+    step3.innerHTML = `<p>This is the last step, babygirl.</p><ul>${step3Options}</ul>`;
   }
 
   if (step === 3) {
