--- a/index.html
+++ b/index.html
@@ -533,11 +533,29 @@ function showDriveResult() {
   let message = "Your fate is sealed.";
 
   if (step1 === 'Control' && step2 === 'Mind Games' && step3 === 'Collapse') {
-    message = "You wanted control. Now your mind is broken into surrender. Good girl.";
-  } else if (step1 === 'Tease' && step2 === 'Public Play' && step3 === 'Thrill') {
-    message = "You wanted eyes on you, didn’t you? Filthy, brave, *mine*.";
+    message = "No panties for a week for my kitten.";
+      if (step1 === 'Control' && step2 === 'Mind Games' && step3 === 'Surrender') {
+    message = "Those pretty breasts shall see only nude and pink bras for the next two days.";
+      if (step1 === 'Control' && step2 === 'Slow Denial' && step3 === 'Tears') {
+    message = "Dirty-talk throughout the week."
+      if (step1 === 'Control' && step2 === 'Slow Denial' && step3 === 'Desperation') {
+    message = "Submission-affirmation voice messages throughout the week, every night.";;
+  } else if (step1 === 'Tease' && step2 === 'Whispers' && step3 === 'Begging') {
+    message = "Boob-play while kneeling for you.";
+      } else if (step1 === 'Tease' && step2 === 'Whispers' && step3 === 'Moaning') {
+    message = "A special message before a butt presentation.";
+      } else if (step1 === 'Tease' && step2 === 'Public Play' && step3 === 'Shame') {
+    message = "Smiling and standing pussy presentation.";
+      } else if (step1 === 'Tease' && step2 === 'Public Play' && step3 === 'Thrill') {
+    message = "Smiling and standing boobs presentation";
   } else if (step1 === 'Obey' && step2 === 'Instructions' && step3 === 'Complete Submission') {
-    message = "You're perfect when you're quiet and obedient. Stay like that.";
+    message = "Pussy presentation on a chair.";
+      } else if (step1 === 'Obey' && step2 === 'Instructions' && step3 === 'Blind Trust') {
+    message = "A nerdy display as a hot nude.";
+      } else if (step1 === 'Obey' && step2 === 'Deprivation' && step3 === 'Beg For Release') {
+    message = "Pretty up for me with your tits out.";
+      } else if (step1 === 'Obey' && step2 === 'Deprivation' && step3 === 'Cry Yourself Dry') {
+    message = "Get back to the basics and remind me when I first fell for you.";
   }
   // Add more custom paths as needed
 
