--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
   align-items: center;
   justify-content: space-between;
 }
+#main-app {
+  display: none;
+  opacity: 0;
+}
   </style>
 </head>
 
