--- a/index.html
+++ b/index.html
@@ -312,10 +312,6 @@
   align-items: center;
   justify-content: space-between;
 }
-#main-app {
-  display: none;
-  opacity: 0;
-}
   </style>
 </head>
 
@@ -327,7 +323,7 @@
     <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
 
-  <div id="main-app" style="display: none;">
+  <div id="main-app" style="display: none;opacity: 0;">
     <header>
       <div class="logo">
         babygirl
