--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
 
-  <div id="main-app" style="display: none;opacity: 0;">
+  <div id="main-app">
     <header>
       <div class="logo">
         babygirl
