--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
 
-  <div id="main-app">
+  <div id="main-app" style="display: none;opacity: 0;">
     <header>
       <div class="logo">
         babygirl
@@ -630,19 +630,25 @@ function sendChat() {
         alert("Error: " + JSON.stringify(error));
       });
   });
-   document.addEventListener("DOMContentLoaded", function () {
-    const enterBtn = document.getElementById("enter-btn");
-    if (enterBtn) {
-      enterBtn.addEventListener("click", function () {
-        document.getElementById("intro-screen").classList.add("fade-out");
-        setTimeout(() => {
-          document.getElementById("intro-screen").style.display = "none";
-          document.getElementById("main-app").classList.add("fade-in");
-          document.getElementById("main-app").style.display = "block";
-        }, 500); // matches animation duration
-      });
-    }
-  });
+      document.addEventListener("DOMContentLoaded", function () {
+  const enterBtn = document.getElementById("enter-btn");
+  if (enterBtn) {
+    enterBtn.addEventListener("click", function () {
+      // Add fade-out class to intro screen (if you have CSS for fade-out)
+      document.getElementById("intro-screen").classList.add("fade-out");
+
+      setTimeout(() => {
+        // Hide intro screen after fade out animation
+        document.getElementById("intro-screen").style.display = "none";
+
+        // Show main app and add fade-in class (if you have CSS for fade-in)
+        const mainApp = document.getElementById("main-app");
+        mainApp.style.display = "block";
+        mainApp.classList.add("fade-in");
+      }, 500); // adjust to match your CSS animation duration
+    });
+  }
+});
   (function () {
     emailjs.init("h1yqyFnG8ms_YHBWn"); // Replace with your actual Public Key
   })();
