--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         }, 500);
       });
     });
-
+</script>
+<script>
     function showTab(tabId) {
       document.querySelectorAll('.tab-section').forEach(section => section.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
