--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <p class="intro-sub">You know the rules, darling. Obey. Submit. Please.</p>
     <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
-  <div id="main-app" style="display: none;opacity: 0;">
+  <div id="main-app" style="display: none;">
     <header>
       <div class="logo">
         babygirl
@@ -437,22 +437,11 @@
       </div>
     </footer>
   </div>
-  <script>          document.addEventListener("DOMContentLoaded", function () {
-      const intro = document.getElementById("intro-screen");
-      const app = document.getElementById("main-app");
-      const btn = document.getElementById("enter-btn");
-
-      btn.addEventListener("click", function () {
-        intro.classList.add("fade-out");
-
-        setTimeout(() => {
-          intro.style.display = "none";
-          app.classList.add("fade-in");
-        }, 500);
-      });
-    });
-</script>
-<script>
+  <script>     
+   document.getElementById("enter-btn").addEventListener("click", function () {
+  document.getElementById("intro-screen").style.display = "none";
+  document.getElementById("main-app").style.display = "block";
+});
     function showTab(tabId) {
       document.querySelectorAll('.tab-section').forEach(section => section.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
