--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <p class="intro-sub">You know the rules, darling. Obey. Submit. Please.</p>
     <button id="enter-btn">I can't wait to be your good girl.</button>
   </div>
-  <div id="main-app" style="display: none;">
+  <div id="main-app" style="display: none; opacity: 0;">
     <header>
       <div class="logo">
         babygirl
@@ -438,7 +438,6 @@
     </footer>
   </div>
   <script>     
-
     function showTab(tabId) {
       document.querySelectorAll('.tab-section').forEach(section => section.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
